# eulix

./: .gitignore  Makefile  go.mod  go.sum
cmd/eulix/: main.go
eulix-embed/: Cargo.toml  README.md  json-schemas.txt  test_build.sh
eulix-embed/src/: candle_backend.rs  chunker.rs  context.rs  embedder.rs  index.rs  kb_loader.rs  main.rs  onnx_backend.rs
eulix-parser/: Architecture.md
eulix-parser/src/: main.rs
eulix-parser/src/utils/: file_walker.rs  ignore.rs
internal/checksum/: checksum.go  detector.go
internal/cli/: analyze.go  ask.go  cache.go  chat.go  commands.go  history.go  init.go
internal/config/: config.go
internal/kb/: loader.go  search.go  types.go
internal/llm/: ollama.go  openai.go
internal/parser/: runner.go
internal/query/: router.go
internal/storage/: redis.go  sqlite.go
internal/tui/: app.go  history.go
